--- a/Manpower_MVC/Views/PrintList/MonthWork.cshtml
+++ b/Manpower_MVC/Views/PrintList/MonthWork.cshtml
@@ -9,7 +9,7 @@
         <input type="month" name="date" id="date" value="" />
     </p>
     <p>
-        <input type="submit" value="顯示報表" class="btn btn-primary" name="sub" id="sub" />
+        <input type="submit" value="顯示報表" class="btn btn-info" name="sub" id="sub" />
     </p>
 </form>
 
