--- a/Manpower_MVC/Views/Employee/CreateEmpIns.cshtml
+++ b/Manpower_MVC/Views/Employee/CreateEmpIns.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Manpower_MVC.Models.EmpInsurance
 
 @{
-    ViewBag.Title = "勞健加減項";
+    ViewBag.Title = "點工人事資料";
 }
 
-<h2>CreateEmpIns</h2>
+<h2>建立勞健加減項</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -46,12 +46,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("ListEmpIns", new { id = ViewBag.empId })')" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("返回勞健加減項", "ListEmpIns", new { id = ViewBag.empId })
-</div>
