--- a/Manpower_MVC/Views/Employee/Edit.cshtml
+++ b/Manpower_MVC/Views/Employee/Edit.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Manpower_MVC.Models.Employee
 
 @{
-    ViewBag.Title = "人事資料";
+    ViewBag.Title = "點工人事資料";
 }
 
 <form method="post" action="@Url.Action("Edit")">
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>員工基本資料</h4>
+        <h4>編輯點工人事資料</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -63,12 +63,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="更新" class="btn btn-default" />
+                <input type="submit" value="更新" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("Index")')" />
             </div>
         </div>
     </div>
 </form>
-
-    <div>
-        @Html.ActionLink("返回人事資料列表", "Index")
-    </div>
