--- a/Manpower_MVC/Views/OwnerPay/EditPayWork.cshtml
+++ b/Manpower_MVC/Views/OwnerPay/EditPayWork.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Manpower_MVC.Models.OwnerPayWork
 
 @{
-    ViewBag.Title = "請款工種";
+    ViewBag.Title = "業主工種請款資料";
 }
 
 <h4>編輯請款工種</h4>
@@ -10,7 +10,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>OwnerPayWork</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -56,12 +55,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="更新" class="btn btn-success" />  
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("ListPayWork", new { id = ViewBag.payId })')" />
             </div>
         </div>
     </div>
 </form>
-
-    <div>
-        @Html.ActionLink("返回請款工種列表", "ListPayWork", new { id = ViewBag.payId })
-    </div>
