--- a/Manpower_MVC/Views/PrintList/PayDetail.cshtml
+++ b/Manpower_MVC/Views/PrintList/PayDetail.cshtml
@@ -60,10 +60,10 @@
                     @item.ConPersonTel
                 </td>
                 <td>
-                    <input type="button" value="顯示" class="btn btn-primary" onclick="location.replace('@Url.Action("PayDetail", new { building = item.ID, year = item.Year, month = item.Month })')" />
+                    <input type="button" value="顯示" class="btn btn-info btn-xs" onclick="location.replace('@Url.Action("PayDetail", new { building = item.ID, year = item.Year, month = item.Month })')" />
                 </td>
                 <td>
-                    <input type="button" value="列印" class="btn btn-success" onclick="window.open('@Url.Action("PrintPayDetail", new {building = item.ID, year = item.Year, month = item.Month})')" />
+                    <input type="button" value="列印" class="btn btn-success btn-xs" onclick="window.open('@Url.Action("PrintPayDetail", new {building = item.ID, year = item.Year, month = item.Month})')" />
                 </td>
             </tr>
         }
