--- a/Manpower_MVC/Views/Shared/_Sidebar.cshtml
+++ b/Manpower_MVC/Views/Shared/_Sidebar.cshtml
@@ -14,28 +14,35 @@
         </form>
         @* END Search *@
         @* BEGIN Menu *@
-        <ul class="sidebar-menu">
+        <ul class="sidebar-menu tree">
             <li class="header">功能選單</li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "index" ? "active" : "")">
+            <li class="treeview">
                 <a href="@Url.Action("Index", "Home")"><i class="fa fa-link"></i> <span>回首頁</span></a>
             </li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "a01" ? "active" : "")">
-                <a href="@Url.Action("Index", "Employee")"><i class="fa fa-newspaper-o"></i><span>人事資料 (Alt + 1)</span></a>
+            <li class="treeview">
+                <a href="#"><i class="fa fa-bus"></i><span>基本資料</span></a>
+                <ul class="treeview-menu" style="display: none;">
+                    <li class="active"><a href="@Url.Action("Index", "Employee")"><i class="fa fa-circle-o"></i> 點工人事資料</a></li>
+                    <li class="active"><a href="@Url.Action("Index", "WorkCare")"><i class="fa fa-circle-o"></i> 點工工種薪資</a></li>
+                    <li class="active"><a href="@Url.Action("Index", "Owner")"><i class="fa fa-circle-o"></i> 業主基本資料</a></li>
+                    <li class="active"><a href="@Url.Action("Index", "OwnerPay")"><i class="fa fa-circle-o"></i> 業主工種請款資料</a></li>
+                </ul>
             </li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "a11" ? "active" : "")">
-                <a href="@Url.Action("Index", "WorkCare")"><i class="fa fa-truck"></i><span>工種薪資 (Alt + 2)</span></a>
+            <li class="treeview">
+                <a href="#"><i class="fa fa-bus"></i><span>例行作業</span></a>
+                <ul class="treeview-menu" style="display: none;">
+                    <li class="active"><a href="@Url.Action("Index", "WorkList")"><i class="fa fa-circle-o"></i> 每日工單輸入</a></li>
+                    <li class="active"><a href="@Url.Action("Index", "EmpSal")"><i class="fa fa-circle-o"></i> 點工薪資月結</a></li>
+                </ul>
             </li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "a21" ? "active" : "")">
-                <a href="@Url.Action("Index", "Owner")"><i class="fa fa-map-marker"></i><span>業主資料 (Alt + 3)</span></a>
-            </li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "a31" ? "active" : "")">
-                <a href="@Url.Action("Index", "OwnerPay")"><i class="fa fa-truck"></i><span>業主請款 (Alt + 4)</span></a>
-            </li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "b01" ? "active" : "")">
-                <a href="@Url.Action("Index", "WorkList")"><i class="fa fa-bus"></i><span>工單輸入 (Alt + 5)</span></a>
-            </li>
-            <li class="@(ViewContext.RouteData.Values["Action"].ToString().ToLower() == "b01" ? "active" : "")">
-                <a href="@Url.Action("Index", "EmpSal")"><i class="fa fa-bus"></i><span>員工薪資 (Alt + 5)</span></a>
+            <li class="treeview">
+                <a href="#"><i class="fa fa-bus"></i><span>報表畫面</span></a>
+                <ul class="treeview-menu" style="display: none;">
+                    <li class="active"><a href="@Url.Action("MonthWork", "PrintList")"><i class="fa fa-circle-o"></i> 出工月報表</a></li>
+                    <li class="active"><a href="@Url.Action("EmpSal", "PrintList")"><i class="fa fa-circle-o"></i> 出工薪資總表</a></li>
+                    <li class="active"><a href="@Url.Action("PayWork", "PrintList")"><i class="fa fa-circle-o"></i> 請款總表</a></li>
+                    <li class="active"><a href="@Url.Action("PayDetail", "PrintList")"><i class="fa fa-circle-o"></i> 請款明細表</a></li>
+                </ul>
             </li>
         </ul>
 
