--- a/Manpower_MVC/Views/WorkCare/Edit.cshtml
+++ b/Manpower_MVC/Views/WorkCare/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Manpower_MVC.Models.WorkCategory
 
 @{
-    ViewBag.Title = "工種薪資";
+    ViewBag.Title = "點工工種薪資";
 }
 
-<h2>工種薪資資料</h2>
+<h2>編輯工種薪資</h2>
 
 <form method="post" action="@Url.Action("Edit")">
     @Html.AntiForgeryToken()
@@ -58,19 +58,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Remark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Remark, new { @class = "form-control", rows = "3", placeholder = "備註..." })
                 @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="更新" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("Index")')" />
             </div>
         </div>
     </div>
 </form>
-
-    <div>
-        @Html.ActionLink("返回工種薪資列表", "Index")
-    </div>
