--- a/Manpower_MVC/Views/WorkCare/Index.cshtml
+++ b/Manpower_MVC/Views/WorkCare/Index.cshtml
@@ -1,11 +1,14 @@
 ﻿@model IEnumerable<Manpower_MVC.Models.WorkCategory>
 
 @{
-    ViewBag.Title = "工種薪資";
+    ViewBag.Title = "點工工種薪資";
 }
 
 <p>
-    <h4>工種薪資列表</h4>
+    <h4>點工工種薪資列表</h4>
+</p>
+<p>
+    <input type="button" value="建立工種薪資" class="btn btn-primary" onclick="location.replace('@Url.Action("Create")')" />
 </p>
 <table class="table">
     <tr>
@@ -51,16 +54,13 @@
             @Html.DisplayFor(modelItem => item.Remark)
         </td>
         <td>
-            @Html.ActionLink("更新", "Edit", new { id = item.ID }) |
-            @Html.ActionLink("刪除", "Delete", new { id = item.ID })
+            <input type="button" value="編輯" class="btn btn-warning btn-xs" onclick="location.replace('@Url.Action("Edit", new { id=item.ID })')" />
+            <input type="button" value="刪除" class="btn btn-danger btn-xs" onclick="if(window.confirm('確定要刪除')){location.replace('@Url.Action("Delete", new { id=item.ID })')}" />
         </td>
     </tr>
 }
 
 </table>
-<p>
-    @Html.ActionLink("新增工種薪資", "Create")
-</p>
 <!--
     <input type="button" value="整頁列印" onclick="print()">
 -->
