--- a/Manpower_MVC/Views/WorkList/CreateWorkList.cshtml
+++ b/Manpower_MVC/Views/WorkList/CreateWorkList.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Manpower_MVC.Models.WorkList
 
 @{
-    ViewBag.Title = "CreateWorkList";
+    ViewBag.Title = "每日工單輸入";
 }
 
-<h2>CreateWorkList</h2>
+<h2>建立每日工單</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -45,12 +45,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("Index")')" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
