--- a/Manpower_MVC/Views/WorkList/CreateWorker.cshtml
+++ b/Manpower_MVC/Views/WorkList/CreateWorker.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "每日工單輸入";
 }
 
-<h4>新增工人</h4>
+<h4>建立工人</h4>
 
 
 @using (Html.BeginForm()) 
@@ -82,12 +82,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="新增" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("ListWorker", new { listId = ViewBag.listId })')" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("返回工人列表", "ListWorker", new { listId = ViewBag.listId })
-</div>
