--- a/Manpower_MVC/Views/WorkList/EditWorker.cshtml
+++ b/Manpower_MVC/Views/WorkList/EditWorker.cshtml
@@ -83,12 +83,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="更新" class="btn btn-success" />
+                <input type="button" value="取消" class="btn btn-default" onclick="location.replace('@Url.Action("ListWorker", new { listId = ViewBag.listId })')" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("返回工人列表", "ListWorker", new { listId = ViewBag.listId })
-</div>
