--- a/Manpower_MVC/Views/EmpSal/Index.cshtml
+++ b/Manpower_MVC/Views/EmpSal/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Manpower_MVC.ViewModels.ViewEmpSal>
 
 @{
-    ViewBag.Title = "員工薪資";
+    ViewBag.Title = "點工薪資月結";
 }
 
 <h4>員工薪資列表</h4>
