--- a/Manpower_MVC/Views/Employee/Index.cshtml
+++ b/Manpower_MVC/Views/Employee/Index.cshtml
@@ -10,6 +10,9 @@
 <p>
     <input type="button" value="建立點工人事資料" class="btn btn-primary" onclick="location.replace('@Url.Action("Create")')" />
 </p>
+<p>
+    <input type="button" value="列印點工人事資料" class="btn btn-success" onclick="window.open('@Url.Action("Print")')" />
+</p>
 <table class="table">
     <tr>
         <th>
