--- a/Manpower_MVC/Views/OwnerPay/ListPayWork.cshtml
+++ b/Manpower_MVC/Views/OwnerPay/ListPayWork.cshtml
@@ -13,15 +13,6 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.SalaryDay)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OvertimeHr)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OverOvertimeHr)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.WorkCareID)
         </th>
         <th>
@@ -31,25 +22,29 @@
             @Html.DisplayNameFor(model => model.Salary)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.SalaryDay)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.OvertimeSal)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.OvertimeHr)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.OverOvertimeSal)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.OverOvertimeHr)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Remark)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SalaryDay)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OvertimeHr)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OverOvertimeHr)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.WorkCareID)
         </td>
@@ -60,10 +55,22 @@
             @Html.DisplayFor(modelItem => item.Salary)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.SalaryDay)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.OvertimeSal)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.OvertimeHr)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.OverOvertimeSal)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.OverOvertimeHr)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Remark)
         </td>
         <td>
             <input type="button" value="編輯" class="btn btn-warning btn-xs" onclick="location.replace('@Url.Action("EditPayWork", new { id=item.ID })')" />
