--- a/Manpower_MVC/Views/Home/Index.cshtml
+++ b/Manpower_MVC/Views/Home/Index.cshtml
@@ -16,24 +16,15 @@
             </div>
             -->
             <div class="col-md-2 col-xs-12"></div>
-            <div class="col-md-2 col-xs-12" style="padding: 20px 0px;">
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../Employee/Index'">人事資料</button>
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../WorkCare/Index'">工種薪資</button>
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../Owner/Index'">業主資料</button>
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../OwnerPay/Index'">業主工種請款</button>
-            </div>
             <div class="col-md-4 col-xs-12">
-                <a href="Home/b01"><img src="~/Content/img/indexcar.png" style="height: auto; width: 100%; padding: 20px;"></a>
-            </div>
-            <div class="col-md-2 col-xs-12" style="padding: 20px 0px;">
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='Home/b11'">付款作業</button>
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='Home/b21'">請款作業</button>
+                <h1>全域人力管理系統</h1>
+                <a href="@Url.Action("Index", "Employee")"><img src="~/Content/img/index.jpg" style="height: auto; width: 100%; padding: 20px;"></a>
             </div>
             <div class="col-md-2 col-xs-12"></div>
         </div>
     </div>
 </div>
-
+<!--
 <script>
   $(document).ready(function(){
     $(document).keydown(function(e){
@@ -59,3 +50,4 @@
     });
   });
 </script>	
+    -->
