--- a/Manpower_MVC/Views/Shared/_Sidebar.cshtml
+++ b/Manpower_MVC/Views/Shared/_Sidebar.cshtml
@@ -17,10 +17,10 @@
         <ul class="sidebar-menu tree">
             <li class="header">功能選單</li>
             <li class="treeview">
-                <a href="@Url.Action("Index", "Home")"><i class="fa fa-link"></i> <span>回首頁</span></a>
+                <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>回首頁</span></a>
             </li>
             <li class="treeview">
-                <a href="#"><i class="fa fa-bus"></i><span>基本資料</span></a>
+                <a href="#"><i class="fa fa-pencil-square-o"></i><span>基本資料</span></a>
                 <ul class="treeview-menu" style="display: none;">
                     <li class="active"><a href="@Url.Action("Index", "Employee")"><i class="fa fa-circle-o"></i> 點工人事資料</a></li>
                     <li class="active"><a href="@Url.Action("Index", "WorkCare")"><i class="fa fa-circle-o"></i> 點工工種薪資</a></li>
@@ -29,14 +29,14 @@
                 </ul>
             </li>
             <li class="treeview">
-                <a href="#"><i class="fa fa-bus"></i><span>例行作業</span></a>
+                <a href="#"><i class="fa fa-suitcase"></i><span>例行作業</span></a>
                 <ul class="treeview-menu" style="display: none;">
                     <li class="active"><a href="@Url.Action("Index", "WorkList")"><i class="fa fa-circle-o"></i> 每日工單輸入</a></li>
                     <li class="active"><a href="@Url.Action("Index", "EmpSal")"><i class="fa fa-circle-o"></i> 點工薪資月結</a></li>
                 </ul>
             </li>
             <li class="treeview">
-                <a href="#"><i class="fa fa-bus"></i><span>報表畫面</span></a>
+                <a href="#"><i class="fa fa-bar-chart"></i><span>報表畫面</span></a>
                 <ul class="treeview-menu" style="display: none;">
                     <li class="active"><a href="@Url.Action("MonthWork", "PrintList")"><i class="fa fa-circle-o"></i> 出工月報表</a></li>
                     <li class="active"><a href="@Url.Action("EmpSal", "PrintList")"><i class="fa fa-circle-o"></i> 出工薪資總表</a></li>
