--- a/Manpower_MVC/Views/WorkCare/Print.cshtml
+++ b/Manpower_MVC/Views/WorkCare/Print.cshtml
@@ -17,7 +17,7 @@
 <body onload="window.print(); window.close();">
     <div style="text-align:center; font-weight:bolder;">
         <p>
-            <h4>點工人員一覽表</h4>
+            <h4>點工薪資一覽表</h4>
         </p>
     </div>
     <div style="font-size:xx-small;text-align :left;">
