--- a/Manpower_MVC/Views/Employee/ListEmpIns.cshtml
+++ b/Manpower_MVC/Views/Employee/ListEmpIns.cshtml
@@ -11,6 +11,9 @@
 <table class="table">
     <tr>
         <th>
+            次項
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.InsID)
         </th>
         <th>
@@ -28,8 +31,14 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@for (int i = 0; i < Model.Count(); i++)
+{
+    var item = Model.ToList()[i];
+    int j = i + 1;
     <tr>
+        <td>
+            @j
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.InsID)
         </td>
