--- a/Manpower_MVC/Views/WorkList/ListWorker.cshtml
+++ b/Manpower_MVC/Views/WorkList/ListWorker.cshtml
@@ -13,6 +13,9 @@
 <table class="table">
     <tr>
         <th>
+            次項
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.EmpID)
         </th>
         <th>
@@ -39,8 +42,14 @@
         <th></th>
     </tr>
     
-@foreach (var item in Model) {
+@for (int i = 0; i < Model.Count(); i++)
+{
+    var item = Model.ToList()[i];
+    int j = i + 1;
     <tr>
+        <td>
+            @j
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.EmpID)
         </td>
